# Fast-Frontier-Detector

./: CMakeLists.txt  package.xml
modules/: main.cpp
scripts/: frontier_detection.py
