<?xml version="1.0"?>
<package format="2">
  <name>frontier_detector</name>
  <version>0.0.1</version>
  <description>The frontier_detector package</description>

  <maintainer email="amiller89@gmx.de">amiller</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pybind11_catkin</build_depend>

  <exec_depend>pybind11_catkin</exec_depend>

</package>
